# GPU_CPU_algorithms_benchmark

./: CMakeLists.txt  README.md  results_log.txt
benchmarks/: convolution_bench.cpp  fft_bench.cpp  matmul_bench.cpp  reduction_bench.cpp  scan_bench.cpp
include/: algorithms.h
src/cpu/: convolution.cpp  fft.cpp  matmul.cpp  reduction.cpp  scan.cpp
src/gpu/: convolution.cu  fft.cu  matmul.cu  reduction.cu  scan.cu
